# advent-of-code

./: .gitignore  Cargo.toml  README.md
src/: main.rs  solution.rs
src/advent_of_code_2015/: day_01_not_quite_lisp.rs  day_02_i_was_told_there_would_be_no_math.rs  day_03_perfectly_spherical_houses_in_a_vacuum.rs  day_04_the_ideal_stocking_stuffer.rs  day_07_some_assembly_required.rs  day_08_matchsticks.rs  day_09_all_in_a_single_night.rs  day_10_elves_look_elves_say.rs  day_11_corporate_policy.rs  day_1_not_quite_lisp.rs  day_2_i_was_told_there_would_be_no_math.rs  day_3_perfectly_spherical_houses_in_a_vacuum.rs  day_4_the_ideal_stocking_stuffer.rs  day_5_doesnt_he_have_intern_elves_for_this.rs  day_6_probably_a_fire_hazard.rs  day_7_some_assembly_required.rs
