[package]
name = "advent-of-code"
edition = "2024"
description = "My Advent of Code solutions in Rust"
repository = "https://github.com/krobbi/advent-of-code"
publish = false

[dependencies]
md5 = "0.8.0"

[lints.rust]
unknown_lints = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
